# STM32-DisplayTest3

./: .cproject  .mxproject  .project  DisplayTest3 Debug.launch  DisplayTest3.ioc  DisplayTest3_backup.ioc
Core/Inc/: LCDController.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: LCDController.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Debug/: DisplayTest3.elf  makefile  objects.list  sources.mk
Debug/Core/Src/: LCDController.cyclo  LCDController.d  LCDController.su  main.cyclo  main.d  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.d  stm32f7xx_hal_msp.su  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk  system_stm32f7xx.d
Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.cyclo  stm32f7xx_hal.d  stm32f7xx_hal.su  stm32f7xx_hal_adc.d  stm32f7xx_hal_adc_ex.cyclo  stm32f7xx_hal_adc_ex.d  (+52 more)
Debug/Drivers/UI/: subdir.mk  ui.cyclo  ui.d  ui.su  ui_helpers.cyclo  ui_helpers.d  ui_helpers.su  ui_theme_manager.cyclo  ui_theme_manager.d  ui_theme_manager.su  ui_themes.cyclo  ui_themes.d  ui_themes.su
Drivers/: lv_conf.h
Drivers/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
Drivers/UI/components/: ui_comp_hook.c
Drivers/UI/fonts/: ui_font_BarlowBold120.c  ui_font_BarlowBold32.c  ui_font_BarlowMedium20.c
Drivers/UI/images/: ui_img_1346116439.c  ui_img_battery_full_20dp_fill1_wght400_grad0_opsz20_png.c  ui_img_bolt_20dp_fill1_wght400_grad0_opsz20_png.c  ui_img_rusolar_resized_png.c
Drivers/UI/screens/: ui_Screen_Dark.c  ui_Screen_Loading.c  ui_Screen_Main.c
(+1070 files in other folders)
